Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,20 +68,22 @@ steps:
     artifactName: 'RobotResults'
   condition: always()
 
-# 8. Download last successful artifact from any branch
+
+# 8. Download last successful artifact from main branch
 - task: DownloadPipelineArtifact@2
   inputs:
     buildType: 'specific'
     project: 'AutomatedTesting'
     pipeline: 'AutomatedTesting-.NET Desktop-CI'
-    buildVersionToDownload: 'latest'
+    buildVersionToDownload: 'latestFromBranch'
+    branchName: 'refs/heads/main'
     artifactName: 'drop'
-    targetPath: '$(Build.ArtifactStagingDirectory)/rollback'
+    targetPath: '$(Build.ArtifactStagingDirectory)\rollback'
   displayName: 'Download Previous Successful Artifact'
   condition: failed()
   continueOnError: true
 
-# 9. Conditional redeploy using xcopy with /I to avoid prompt
+# 9. Conditional redeploy using xcopy with /I
 - powershell: |
     if (Test-Path "$(Build.ArtifactStagingDirectory)\rollback") {
       Write-Host "Rollback artifact found. Re-deploying the previous stable build..."
@@ -92,7 +94,7 @@ steps:
   displayName: 'Conditional Redeploy of Previous Artifact'
   condition: failed()
 
-# 10. Optional: Verify rollback folder contents
+# 10. Verify rollback folder contents
 - script: |
     echo "Verifying files in deployment directory..."
     dir "C:\YourDeploymentFolder"
