Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ steps:
 
 # 4. Run Robot Framework tests
 - script: |
-    robot --variable BROWSER:edge ^
+    robot --variable BROWSER:edge ^ 
           --output "$(ROBOT_REPORTS_DIR)\output.xml" ^ 
           --log "$(ROBOT_REPORTS_DIR)\log.html" ^ 
           --report "$(ROBOT_REPORTS_DIR)\report.html" ^ 
@@ -79,7 +79,7 @@ steps:
     $definitionIdResponse = Invoke-RestMethod -Uri $definitionIdUrl -Headers @{Authorization = "Bearer $personalAccessToken"} -Method Get
     $definitionId = $definitionIdResponse.value[0].id
 
-    # Update query to avoid conflict between filters
+    # Adjusted API call to retrieve the latest successful builds
     $buildsUrl = "$($organization)$project/_apis/build/builds?definitions=$definitionId&resultFilter=succeeded&statusFilter=completed&$top=2&queryOrder=finishTimeDescending&api-version=7.0"
     $buildsResponse = Invoke-RestMethod -Uri $buildsUrl -Headers @{Authorization = "Bearer $personalAccessToken"} -Method Get
 
@@ -88,6 +88,7 @@ steps:
       exit 1
     }
 
+    # Get the second most recent successful build
     $secondBuildId = $buildsResponse.value[1].id
     Write-Host "##vso[task.setvariable variable=PreviousBuildId]$secondBuildId"
   displayName: 'Get Previous Successful Build ID'
@@ -95,7 +96,7 @@ steps:
     System.AccessToken: $(System.AccessToken)
   condition: failed()
 
-# 9. Download Previous Successful Artifact (2nd latest)
+# 9. Download Previous Successful Artifact (2nd Latest)
 - task: DownloadPipelineArtifact@2
   inputs:
     project: 'AutomatedTesting'
